Fixed User-Uploaded Video distorted default image (5545)  - Added thumbnail-default.jpg as default thumbnail image  - Fixed list-style for segments in content-navigation

--- a/css/contentNavigation/content-navigation.less
+++ b/css/contentNavigation/content-navigation.less
@@ -56,6 +56,7 @@
 			}
 
 			li {
+				list-style: none;
 				margin-bottom : 30px;
 				.sc-segment-content-container {
 
